kubernetes-files/java-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-java-service
spec:
  selector:
    app: hello-java
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-java
spec:
  selector:
    matchLabels:
      app: hello-java
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-java
    spec:
      containers:
      - name: hello-java
        image: 245616658709.dkr.ecr.us-east-2.amazonaws.com/javaimage:latest
        ports:
        - containerPort: 8080
