kubernetes-files/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-java-python
  annotations:
          nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /javaapp
        backend:
          serviceName: hello-java-service
          servicePort: 80
      - path: /pythonapp
        backend:
          serviceName: hello-python-service
          servicePort: 80
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
